# term_erm

./: #ui.ui#  .SRCINFO  PKGBUILD  README.md  css.css  main.py  pyproject.toml  script.sh  spare_bits_of_code  term_erm.desktop  ui.ui  ui.ui~
